fix display collapse on top page

--- a/statics/css/deepstation.css
+++ b/statics/css/deepstation.css
@@ -147,6 +147,16 @@ h3 {
     padding-top: 10px;
     margin-bottom: 30px;
     margin-top: 10px;
+	display: flex;
+	display: -moz-flex;
+	display: -o-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+    flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
+	-o-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
 }
 
 .dataset, .model,.gpu {
@@ -158,7 +168,6 @@ h3 {
     color:#0c0;
     padding: 0px 10px;
     margin: 5px;
-    display: inline-block;
     overflow: hidden;
 }
 
